# GitHub-Copilot-QA-Evaluation

./: ABSTRACT.md  CMakeLists.txt  Presentation Breakdown.docx  PresentationBreakdown.md  README.md  build.sh  generate_reports.sh  prompts.md  run_case2.sh  run_case3.sh
boosthppfiles/: replace.hpp  split.hpp  trim.hpp
reports/case1/: case1_boost_report.functions.html  case1_boost_report.html  case1_boost_report.trim.hpp.6b591d6de6b67ea4bab25a0d898dff3c.html  case1_copilot_report.functions.html  case1_copilot_report.html  case1_copilot_report.trim.hpp.6b591d6de6b67ea4bab25a0d898dff3c.html
reports/case2/: case2_boost_report.functions.html  case2_boost_report.html  case2_boost_report.replace.hpp.aecb2ad5b5331f1681bd289e8a697494.html  case2_copilot_report.functions.html  case2_copilot_report.html  case2_copilot_report.replace.hpp.aecb2ad5b5331f1681bd289e8a697494.html
reports/case3/: case3_boost_report.functions.html  case3_boost_report.html  case3_boost_report.split.hpp.eb3cfaa851c1d13331b9ff05274f6b39.html  case3_copilot_report.functions.html  case3_copilot_report.html  case3_copilot_report.split.hpp.eb3cfaa851c1d13331b9ff05274f6b39.html
tests/case1_trim/: copilot_trim_test.cpp
tests/case2_replace/: boost_replace_test.cpp  copilot_replace_test_original_broken.cpp
tests/case3_split/: boost_split_test.cpp  copilot_split_test.cpp
